[build-system]
requires = ["hatchling>=1.27", "build>=1.2", "packaging>=24"]
build-backend = "hatchling.build"

[project]
name = "rpi_sensors"
version = "0.1.0"
description = "Meta package + root build hook for IMU (LSM6DS3), BARO (BMP390), SERVO, ADS1115 ADC, IGNITER, and BUZZER"
readme = "README.md"
requires-python = ">=3.13"
authors = [{name = "RPI Sensors contributors"}]
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Operating System :: POSIX :: Linux",
]

[tool.hatch.build.targets.wheel]
packages = ["rpi_sensors", "tools", "runtime.python"]

[tool.hatch.build.hooks.custom]
path = "tools/build_hook.py"

[tool.hatch.build.targets.sdist]
include = [
  "README.md",
  "pyproject.toml",
  "rpi_sensors/**",
  "tools/build_hook.py",
  "tools/**",
  "runtime/python/**",
  "IMU/**",
  "BARO/**",
  "SERVO/**",
  "ADC/**",
  "IGNITER/**",
  "BUZZER/**",
]

[project.scripts]
rt-status-report = "tools.rt_status_report:main"
rt-ipc-dump = "tools.rt_ipc_dump:main"
rt-csv-recorder = "tools.rt_csv_recorder:main"
dummy-controller = "runtime.python.dummy_controller:main"
dummy-estimator = "runtime.python.dummy_estimator:main"
