[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "ADS1115_rpi"
version = "0.1.0"
description = "Production-grade Linux I2C driver and Python bindings for ADS1115"
readme = "README.md"
requires-python = ">=3.13"
authors = [{name = "ADS1115 contributors"}]
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: C++",
  "Operating System :: POSIX :: Linux",
]

[tool.scikit-build]
wheel.packages = ["python/ADS1115_rpi"]
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
ADS1115_BUILD_PYTHON = "ON"

[project.scripts]
ads1115-stream = "ADS1115_rpi.cli:main"

[tool.cibuildwheel]
build = ["cp313-manylinux_aarch64"]
archs = ["aarch64"]
skip = ["*-musllinux*"]
