[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "lsm6ds3_rpi"
version = "0.1.0"
description = "Production-grade Linux I2C/SPI driver and Python bindings for ST LSM6DS3"
readme = "README.md"
requires-python = ">=3.13"
authors = [{name = "LSM6DS3 contributors"}]
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: C++",
  "Operating System :: POSIX :: Linux",
]

[tool.scikit-build]
wheel.packages = ["python/lsm6ds3_rpi"]
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
LSM6DS3_BUILD_PYTHON = "ON"

[project.scripts]
lsm6ds3-stream = "lsm6ds3_rpi.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.cibuildwheel]
build = ["cp313-manylinux_aarch64"]
archs = ["aarch64"]
skip = ["*-musllinux*"]
